# Turbot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  Turbot  Turbot.pro  main.cpp  piece.cpp  piece.h  position.cpp  position.h  square.cpp  square.h  todo.md  types.h
include/: board.h  boardhelper.h  evaluator.h  game.h  legalmover.h  move.h  moveGenerator.h  movepicker.h  mover.h  piece.h  player.h  position.h  positioneval.h  positionhelper.h  square.h  tools.h  types.h  zobrist.h
src/: board.cpp  boardhelper.cpp  evaluator.cpp  game.cpp  legalmover.cpp  main.cpp  minmaxmovegenerator.cpp  minmaxmovepicker.cpp  move.cpp  moveGenerator.cpp  movepicker.cpp  mover.cpp  piece.cpp  player.cpp  position.cpp  positioneval.cpp  positionhelper.cpp  square.cpp  tools.cpp  zobrist.cpp
